--- a/asset/sass/style.scss
+++ b/asset/sass/style.scss
@@ -1002,23 +1002,6 @@ a:hover {
     font-size: 16px;
 }
 
-#style-1::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-}
-
-#style-1::-webkit-scrollbar {
-    width: 12px;
-    background-color: rgba(255, 255, 255, 0.4);
-    background: rgba(255, 255, 255, 0.4);
-}
-
-#style-1::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: #fff;
-}
-
 .partlink{
     display: contents;
 }
@@ -1104,7 +1087,7 @@ a:hover {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #f6c23c, 0 0 40px #f6c23c, 0 0 50px #f6c23c, 0 0 60px #f6c23c, 0 0 70px #f6c23c;
   }
-  
+
   to {
     text-shadow: 0 0 20px #fff, 0 0 30px #FF0000, 0 0 40px #FF0000, 0 0 50px #FF0000, 0 0 60px #FF0000, 0 0 70px #FF0000, 0 0 80px #FF0000;
   }
@@ -1123,7 +1106,7 @@ margin-left: 25%;
 
 figcaption{
     top:40%;}
-     
+
 figure{
 margin-left: 80%;
 position:relative;}
